code/typescript/FactSetConcordance/v1/docs/EntityTaskStatus.md
# factsetconcordance.EntityTaskStatus

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**taskId** | **Number** | Identifier denoting a specific Concordance task submitted by the user. | [optional] 
**taskName** | **String** | User-defined name for the task used to name the output file. | [optional] 
**taskAction** | **String** | Action status for the Concordance Task process. | [optional] 
**status** | **String** | Status of the Concordance Task. If the value is \&quot;SUCCESS\&quot;, you can move to the subsequent /entity-decisions endpoint to retrieve the results. | [optional] 
**inputFile** | **String** | The input file is posted as a file object in the form.  | [optional] 
**clientIdColumn** | **String** | Name of the column in the input file that contains a unique identifier supplied by the user. | [optional] 
**nameColumn** | **String** | Name of the column in the input file that contains the entity name to be matched. | [optional] 
**countryColumn** | **String** | Name of the column in the input file that contains the ISO2 country code corresponding to the entity name.  The country code is used when evaluating candidates for a match.  | [optional] 
**stateColumn** | **String** | Name of the column in the input file that contains the Two-character state code corresponding to the entity name. The state code is used when evaluating candidates for a match.  | [optional] 
**urlColumn** | **String** | Name of the column in the input file that contains the URL corresponding to the entity name. The URL is used when evaluating candidates for a match.  | [optional] 
**hasResult** | **Boolean** | Flag denoting the taskId has a result. | [optional] 
**taskSubmitTime** | **Date** | Time the Task was submitted in UTC. | [optional] 
**message** | **String** | Textual message for the status. | [optional] 
**inputCount** | **Number** | Number of records in the Input File. | [optional] 
**mappedCount** | **Number** | Number of records with status of MAPPED the Input File. | [optional] 
**unmappedCount** | **Number** | Number of records with status of UNMAPPED the Input File. | [optional] 
**indeterminateCount** | **Number** | Number of records with status of INDETERMINATE the Input File. | [optional] 
**processStartTime** | **Date** | Process start time in UTC. | [optional] 
**processDuration** | **Number** | Process duration in seconds. | [optional] 
**tryCount** | **Number** | Number of tries made so far for the request. | [optional] 
**decisionRate** | **Number** | Percentage of mapped entities in the Input File. | [optional] 
**error** | **String** |  | [optional] 
**errorTitle** | **String** |  | [optional] 
**includeEntityType** | **[String]** | Requested Entity types to include.  | [optional] 
**excludeEntityType** | **[String]** | Requested Entity types to exclude.  | [optional] 
**includeEntitySubType** | **[String]** | Requested Entity subtypes to include.  | [optional] 
**excludeEntitySubType** | **[String]** | Requested Entity subtypes to exclude.  | [optional] 



## Enum: StatusEnum


* `PENDING` (value: `"PENDING"`)

* `IN_PROGRESS` (value: `"IN_PROGRESS"`)

* `SUCCESS` (value: `"SUCCESS"`)

* `FAILURE` (value: `"FAILURE"`)

* `BAD_REQUEST` (value: `"BAD_REQUEST"`)

* `ABORTED` (value: `"ABORTED"`)




